--- a/modules/z-pom-app/client/scss/_reports.scss
+++ b/modules/z-pom-app/client/scss/_reports.scss
@@ -48,3 +48,12 @@
 .import-pom-link {
   display: block;
 }
+
+.report-range {
+  display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  button {
+    margin: 10px;
+  }
+}
